[metadata]
url = https://github.com/macatools/macapype
author="macatools team",
maintainer = Macapype developers
description="Pipeline for anatomic processing for macaque",
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License, 2.0
provides =
    macapype
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.10
requires =
    nipype
    rdflib==6.3.1
    pandas==2.2.3
    nilearn
    networkx
    pybids
    scikit-image
    nibabel
    numpy
    SimpleITK
packages = find:
include_package_data = True

[options.package_data]
pydra =
    schema/context.jsonld

[options.extras_require]
test =
    pytest
    pytest-cov
    codecov
    flake8
tests =
    %(test)s
doc =
     sphinx
     sphinx-gallery
     sphinx_bootstrap_theme
     numpydoc
     sphinxcontrib-fulltoc
     matplotlib
docs =
    %(doc)s
    %(test)s
